# Statistik_Projekt_HS25

./: .gitignore  README.md  Table_of_Prompts.md  fallnotiz.md  main.py  pyproject.toml  requirements.txt  tableofprompts.md
notebooks/: N01_EDA.ipynb  N01_explorative_data_analysis.ipynb  N02.ipynb  N02_deskriptive_statistik.ipynb  N03.ipynb  N03_old.ipynb  N04.ipynb  N05.ipynb  N06.ipynb  N07.ipynb  N08.ipynb  N09.ipynb  N10.ipynb  N11.ipynb  NO4.ipynb  bahnhof-mining-hypothese.ipynb  bahnhof-mining.ipynb  bahnhof.ipynb  bhf.ipynb  h10.ipynb  h11.ipynb  hypothesen-test1-peak-vs-offpeak.ipynb  hypothesen-test2.ipynb  hypothesen-test3.ipynb
notebooks/Test Elia /: Notebook1.ipynb  Notebook10.ipynb  Notebook2.ipynb  Notebook3.ipynb  Notebook4.ipynb  Notebook5.ipynb  Notebook6.ipynb  Notebook7.ipynb  Notebook8.ipynb  Notebook9.ipynb
präsentation/: presentation.tex
src/: aggregate_month.py  io_zip_processing.py  utils.py
