[project]
name = "opentransit-ist"
version = "0.1.0"
description = "Statistikprojekt: Analyse der Schweizer ÖV-Ist-Daten"
requires-python = ">=3.10"

dependencies = [
    "pandas",
    "pyarrow",
    "fastparquet",
    "matplotlib",
    "seaborn",
    "jupyter",
    "scipy>=1.15.3",
]

[tool.uv]
package = true
